--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ДЗ 1</title>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
 
-    <body>
+    <body class="page-body">
         <!-- Шапка сайта -->
-        <header class="">
+        <header class="page-header">
             <nav>
                 <a href="./index.html" aria-label="логотип WebStudio">WebStudio</a>
                 <ul class="">
