--- a/index.html
+++ b/index.html
@@ -85,22 +85,22 @@
                 <h2>Наша команда</h2>
                 <ul class="">
                     <li>
-                        <img src="./images/command/Demyanenko.jpg" alt="Фото Игорь Демьяненко" width="270" height="260">
+                        <img src="./images/team/demyanenko.jpg" alt="Фото Игорь Демьяненко" width="270" height="260">
                         <h3>Игорь Демьяненко</h3>
                         <p lang="en">Product Designer</p>
                     </li>
                     <li>
-                        <img src="./images/command/Repina.jpg" alt="Фото Ольга Репина" width="270" height="260">
+                        <img src="./images/team/repina.jpg" alt="Фото Ольга Репина" width="270" height="260">
                         <h3>Ольга Репина</h3>
                         <p lang="en">Frontend Developer</p>
                     </li>
                     <li>
-                        <img src="./images/command/Tarasov.jpg" alt="Фото Николай Тарасов" width="270" height="260">
+                        <img src="./images/team/tarasov.jpg" alt="Фото Николай Тарасов" width="270" height="260">
                         <h3>Николай Тарасов</h3>
                         <p lang="en">Marketing</p>
                     </li>
                     <li>
-                        <img src="./images/command/Ermakov.jpg" alt="Фото Михаил Ермаков" width="270" height="260">
+                        <img src="./images/team/ermakov.jpg" alt="Фото Михаил Ермаков" width="270" height="260">
                         <h3>Михаил Ермаков</h3>
                         <p lang="en">UI Designer</p>
                     </li>
