--- a/index.html
+++ b/index.html
@@ -3,115 +3,117 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>ДЗ 1</title>
+        <title>Главная</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css">
+        <link rel="stylesheet" href="<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">">
         <link rel="stylesheet" href="css/styles.css">
     </head>
 
-    <body class="page-body">
+    <body class="body">
         <!-- Шапка сайта -->
-        <header class="page-header">
-            <nav>
-                <a href="./index.html" aria-label="логотип WebStudio">WebStudio</a>
-                <ul class="">
-                    <li>
-                        <a href="">Студия</a>
+        <header class="header">
+            <nav class="navigation">
+                <a class="logo link" href="./index.html" aria-label="логотип WebStudio">Web<span class="logo-wrap" >Studio</span></a>
+                <ul class="navigation-list list">
+                    <li class="navigation-list-item">
+                        <a class="navigation-list-link link" href="">Студия</a>
                     </li> 
-                    <li>
-                        <a href="">Портфолио</a>
+                    <li class="navigation-list-item">
+                        <a class="navigation-list-link link" href="">Портфолио</a>
                     </li>
-                    <li>
-                        <a href="">Контакты</a>
+                    <li class="navigation-list-item">
+                        <a class="navigation-list-link link" href="">Контакты</a>
                     </li>
                 </ul>
             </nav>
             <!-- Контакты -->
-            <address>
-                <ul>
+            <address class="address">
+                <ul class="link list">
                     <li>
-                        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="header-contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li>
-                        <a href="tel:+380961111111">+38 096 111 11 11</a>
+                        <a class="header-contacts-link" href="tel:+380961111111">+38 096 111 11 11</a>
                     </li>
                 </ul>
             </address>
         </header>
 
         <main>
-            <!-- Главная -->
-            <section>
+            <!-- HERO -->
+            <section class="hero">
                 <h1>Эффективные решения для вашего бизнеса</h1>
-                <button type="button">Заказать услугу</button>
+                <button class="model-btn" type="button">Заказать услугу</button>
             </section>
             <!-- Особенности -->
-            <section>
+            <section class="features">
                 <h2 hidden>Особенности</h2>
-                <ul class="">
+                <ul class="list">
                     <li>
-                        <h3>Внимание к деталям</h3>
-                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                        <h3 class="features-subtitle">Внимание к деталям</h3>
+                        <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li>
-                        <h3>Пунктуальность</h3>
-                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                        <h3 class="features-subtitle">Пунктуальность</h3>
+                        <p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li>
-                        <h3>Планирование</h3>
-                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                        <h3 class="features-subtitle">Планирование</h3>
+                        <p class="features-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li>
-                        <h3>Современные технологии</h3>
-                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                        <h3 class="features-subtitle">Современные технологии</h3>
+                        <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
             </section>
             <!-- Галерея работ -->           
-            <section>
-                <h2>Чем мы занимаемся</h2>
-                <ul class="">
+            <section class="gallery">
+                <h2 class="title">Чем мы занимаемся</h2>
+                <ul class="gallery-list list">
                     <li>
-                        <img src="./images/gallery/box1.jpg" alt="Человек набирает текст на клавиатуре" width="370" height="295">
+                        <img class="gallery-img" src="./images/gallery/box1.jpg" alt="Человек набирает текст на клавиатуре" width="370" height="295">
                     </li>
                     <li>
-                        <img src="./images/gallery/box2.jpg" alt="Человек держит мобильный телефон перед монитором ноутбука" width="370" height="295">
+                        <img class="gallery-img" src="./images/gallery/box2.jpg" alt="Человек держит мобильный телефон перед монитором ноутбука" width="370" height="295">
                     </li>
                     <li>
-                        <img src="./images/gallery/box3.jpg" alt="Человек держит планшет перед монитором компьютера" width="370" height="295">
+                        <img class="gallery-img" src="./images/gallery/box3.jpg" alt="Человек держит планшет перед монитором компьютера" width="370" height="295">
                     </li>
                 </ul>
             </section>           
             <!-- Наша команда -->
-            <section>
-                <h2>Наша команда</h2>
-                <ul class="">
+            <section class="team">
+                <h2 class="title">Наша команда</h2>
+                <ul class="team-list list">
                     <li>
-                        <img src="./images/team/demyanenko.jpg" alt="Фото Игорь Демьяненко" width="270" height="260">
-                        <h3>Игорь Демьяненко</h3>
-                        <p lang="en">Product Designer</p>
+                        <img class="team-img" src="./images/team/demyanenko.jpg" alt="Фото Игорь Демьяненко" width="270" height="260">
+                        <h3 class="team-subtitle">Игорь Демьяненко</h3>
+                        <p class="team-text" lang="en">Product Designer</p>
                     </li>
                     <li>
-                        <img src="./images/team/repina.jpg" alt="Фото Ольга Репина" width="270" height="260">
-                        <h3>Ольга Репина</h3>
-                        <p lang="en">Frontend Developer</p>
+                        <img class="team-img" src="./images/team/repina.jpg" alt="Фото Ольга Репина" width="270" height="260">
+                        <h3 class="team-subtitle">Ольга Репина</h3>
+                        <p class="team-text" lang="en">Frontend Developer</p>
                     </li>
                     <li>
-                        <img src="./images/team/tarasov.jpg" alt="Фото Николай Тарасов" width="270" height="260">
-                        <h3>Николай Тарасов</h3>
-                        <p lang="en">Marketing</p>
+                        <img class="team-img" src="./images/team/tarasov.jpg" alt="Фото Николай Тарасов" width="270" height="260">
+                        <h3 class="team-subtitle">Николай Тарасов</h3>
+                        <p class="team-text" lang="en">Marketing</p>
                     </li>
                     <li>
-                        <img src="./images/team/ermakov.jpg" alt="Фото Михаил Ермаков" width="270" height="260">
-                        <h3>Михаил Ермаков</h3>
-                        <p lang="en">UI Designer</p>
+                        <img class="team-img" src="./images/team/ermakov.jpg" alt="Фото Михаил Ермаков" width="270" height="260">
+                        <h3 class="team-subtitle">Михаил Ермаков</h3>
+                        <p class="team-text" lang="en">UI Designer</p>
                     </li>
                 </ul>
             </section>           
         </main>
         <!-- Подвал -->        
         <footer>
-            <a href="./index.html" aria-label="логотип WebStudio">WebStudio</a>
+            <a class="logo link" href="./index.html" aria-label="логотип WebStudio">Web<span class="logo-wrap" >Studio</span></a>
             <address>
-                <ul class="">
+                <ul class="footer-list list">
                     <li>
                         <a href="https://goo.gl/maps/nuCdKgG8ZwwF333L9" target="_blank">г. Киев, пр-т Леси Украинки, 26</a>
                     </li>
