--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Главная</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css">
-        <link rel="stylesheet" href="<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/styles.css">
     </head>
 
@@ -13,13 +13,13 @@
         <!-- Шапка сайта -->
         <header class="header">
             <nav class="navigation">
-                <a class="logo link" href="./index.html" aria-label="логотип WebStudio">Web<span class="logo-wrap" >Studio</span></a>
+                <a class="logo link" href="./index.html" aria-label="логотип WebStudio">Web<span class="logo-text-header">Studio</span></a>
                 <ul class="navigation-list list">
                     <li class="navigation-list-item">
                         <a class="navigation-list-link link" href="">Студия</a>
                     </li> 
                     <li class="navigation-list-item">
-                        <a class="navigation-list-link link" href="">Портфолио</a>
+                        <a class="navigation-list-link link" href="./portfolio.html">Портфолио</a>
                     </li>
                     <li class="navigation-list-item">
                         <a class="navigation-list-link link" href="">Контакты</a>
@@ -30,10 +30,10 @@
             <address class="address">
                 <ul class="link list">
                     <li>
-                        <a class="header-contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="header-contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li>
-                        <a class="header-contacts-link" href="tel:+380961111111">+38 096 111 11 11</a>
+                        <a class="header-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
                     </li>
                 </ul>
             </address>
@@ -110,18 +110,18 @@
             </section>           
         </main>
         <!-- Подвал -->        
-        <footer>
-            <a class="logo link" href="./index.html" aria-label="логотип WebStudio">Web<span class="logo-wrap" >Studio</span></a>
+        <footer class="footer-list">
+            <a class="logo link" href="./index.html" aria-label="логотип WebStudio">Web<span class="logo-white">Studio</span></a>
             <address>
-                <ul class="footer-list list">
+                <ul class="footer-contacts list address">
                     <li>
-                        <a href="https://goo.gl/maps/nuCdKgG8ZwwF333L9" target="_blank">г. Киев, пр-т Леси Украинки, 26</a>
+                        <a class="footer-item-address link" href="https://goo.gl/maps/nuCdKgG8ZwwF333L9" target="_blank">г. Киев, пр-т Леси Украинки, 26</a>
                     </li>
                     <li>
-                        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="footer-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li>
-                        <a href="tel:+380961111111">+38 096 111 11 11</a>
+                        <a class="footer-item link" href="tel:+380961111111">+38 096 111 11 11</a>
                     </li>
                 </ul> 
             </address>
