--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Главная</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap">
         <link rel="stylesheet" href="css/styles.css">
     </head>
 
@@ -42,7 +42,7 @@
         <main>
             <!-- HERO -->
             <section class="hero">
-                <h1>Эффективные решения для вашего бизнеса</h1>
+                <h1 class="hero-subtitle">Эффективные решения для вашего бизнеса</h1>
                 <button class="model-btn" type="button">Заказать услугу</button>
             </section>
             <!-- Особенности -->
