--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -41,71 +41,75 @@
     <!-- Все -->
     <main>
         <!-- Шапка галереи -->
-        <section class="gallery-portfolio">
-            <h1 hidden>Галерея</h1>
-            <ul class="gallery-portfolio-list list">
-                <li class="gallery-portfolio-item">
-                    <a class="gallery-portfolio-link" href=""></a>Все
+        <section class="portfolio">
+            <h1 hidden>Веб-студия</h1>
+            <ul class="portfolio-list list">
+                <li class="portfolio-item">
+                    <button class="portfolio-model-btn" type="button">Все</button>
                 </li>
-                <li class="gallery-portfolio-item">
-                    <a class="gallery-portfolio-link" href=""></a>Веб-сайты
+                <li class="portfolio-item">
+                    <button class="portfolio-model-btn" type="button">Веб-сайты</button>
                 </li>
-                <li class="gallery-portfolio-item">
-                    <a class="gallery-portfolio-link" href=""></a>Приложения
+                <li class="portfolio-item">
+                    <button class="portfolio-model-btn" type="button">Приложения</button>
                 </li>
-                <li class="gallery-portfolio-item">
-                    <a class="gallery-portfolio-link" href=""></a>Дизайн
+                <li class="portfolio-item">
+                    <button class="portfolio-model-btn" type="button">Дизайн</button>
                 </li>
-                <li class="gallery-portfolio-item">
-                    <a class="gallery-portfolio-link" href=""></a>Маркетинг
+                <li class="portfolio-item">
+                    <button class="portfolio-model-btn" type="button">Маркетинг</button>
                 </li>
             </ul>
         </section>
         <!-- Галерея -->
-        <section class="gallery-portfolio-subject">
-            <img class="gallery-portfolio-img" src="./images/portfolio/technocryk.jpg" alt="Три специалиста на экране ноутбука">
-            <h2 class="gallery-portfolio-subtitle">Технокряк</h2>
-            <p class="gallery-portfolio-text">Веб-сайт</p>
-        </section>
-        <section class="gallery-portfolio-subject">
-            <img class="gallery-portfolio-img" src="./images//portfolio/poster.jpg" alt="Постер New Orlean vs Golden Star">
-            <h2 class="gallery-portfolio-subtitle">Постер New Orlean vs Golden Star</h2>
-            <p class="gallery-portfolio-text">Дизайн</p>
-        </section>
-        <section class="gallery-portfolio-subject">
-            <img class="gallery-portfolio-img" src="./images/portfolio/seafood.jpg" alt="Логотип ресторана Seafood">
-            <h2 class="gallery-portfolio-subtitle">Ресторан Seafood</h2>
-            <p class="gallery-portfolio-text">Приложение</p>
-        </section>
-        <section class="gallery-portfolio-subject">
-            <img class="gallery-portfolio-img" src="./images/portfolio/prime.jpg" alt="Наушники">
-            <h2 class="gallery-portfolio-subtitle">Проект Prime</h2>
-            <p class="gallery-portfolio-text">Маркетинг</p>
-        </section>
-        <section class="gallery-subject">
-            <img class="gallery-portfolio-img" src="./images/portfolio/boxes.jpg" alt="Белая и бежевая коробки">
-            <h2 class="gallery-portfolio-subtitle">Проект Boxes</h2>
-            <p class="gallery-portfolio-text">Приложение</p>
-        </section>
-        <section class="gallery-portfolio-subject">
-            <img class="gallery-portfolio-img" src="./images/portfolio/web-site.jpg" alt="Включенный монитор компьютера">
-            <h2 class="gallery-portfolio-subtitle" lang="en">Inspiration has no Borders</h2>
-            <p class="gallery-portfolio-text">Веб-сайт</p>
-        </section>
-        <section class="gallery-portfolio-subject">
-            <img class="gallery-portfolio-img" src="./images/portfolio/edition.jpg" alt="Раскрытый журнал">
-            <h2 class="gallery-portfolio-subtitle">Издание Limited Edition</h2>
-            <p class="gallery-portfolio-text">Дизайн</p>
-        </section>
-        <section class="gallery-portfolio-subject">
-            <img class="gallery-portfolio-img" src="./images/portfolio/lab.png" alt="Бирка">
-            <h2 class="gallery-portfolio-subtitle">Проект LAB</h2>
-            <p class="gallery-portfolio-text">Маркетинг</p>
-        </section>
-        <section class="gallery-portfolio-subject">
-            <img class="gallery-portfolio-img" src="./images/portfolio/application.jpg" alt="Человек работает с ноутбука">
-            <h2 class="gallery-portfolio-subtitle" lang="en">Growing Business</h2>
-            <p class="gallery-portfolio-text">Приложение</p>
+        <section class="gallery-portfolio">
+            <ul class="gallery-portfolio-list list">
+                <li class="gallery-portfolio-item">
+                    <img class="gallery-portfolio-img" src="./images/portfolio/technocryk.jpg" alt="Три специалиста на экране ноутбука">
+                    <a class="gallery-portfolio-link link" href="">Технокряк</a>
+                    <p class="gallery-portfolio-text">Веб-сайт</p>
+                </li>
+                <li class="gallery-portfolio-item">
+                    <img class="gallery-portfolio-img" src="./images//portfolio/poster.jpg" alt="Постер New Orlean vs Golden Star">
+                    <a class="gallery-portfolio-link link" href="">Постер New Orlean vs Golden Star</a> 
+                    <p class="gallery-portfolio-text">Дизайн</p>
+                </li>
+                <li class="gallery-portfolio-item">
+                    <img class="gallery-portfolio-img" src="./images/portfolio/seafood.jpg" alt="Логотип ресторана Seafood">
+                    <a class="gallery-portfolio-link link" href="">Ресторан Seafood</a>
+                    <p class="gallery-portfolio-text">Приложение</p>
+                </li>
+                <li class="gallery-portfolio-item">
+                    <img class="gallery-portfolio-img" src="./images/portfolio/prime.jpg" alt="Наушники">
+                    <a class="gallery-portfolio-link link" href="">Проект Prime</a>
+                    <p class="gallery-portfolio-text">Маркетинг</p>
+                </li>
+                <li class="gallery-portfolio-item">
+                    <img class="gallery-portfolio-img" src="./images/portfolio/boxes.jpg" alt="Белая и бежевая коробки">
+                    <a class="gallery-portfolio-link link" href="">Проект Boxes</a>
+                    <p class="gallery-portfolio-text">Приложение</p>
+                </li>
+                <li class="gallery-portfolio-item">
+                    <img class="gallery-portfolio-img" src="./images/portfolio/web-site.jpg" alt="Включенный монитор компьютера">
+                    <a class="gallery-portfolio-link link" lang="en" href="">Inspiration has no Borders</a>
+                    <p class="gallery-portfolio-text">Веб-сайт</p>
+                </li>
+                <li class="gallery-portfolio-item">
+                    <img class="gallery-portfolio-img" src="./images/portfolio/edition.jpg" alt="Раскрытый журнал">
+                    <a class="gallery-portfolio-link link" href="">Издание Limited Edition</a>
+                    <p class="gallery-portfolio-text">Дизайн</p>  
+                </li>
+                <li class="gallery-portfolio-item">
+                    <img class="gallery-portfolio-img" src="./images/portfolio/lab.png" alt="Бирка">
+                    <a class="gallery-portfolio-link link" href="">Проект LAB</a>
+                    <p class="gallery-portfolio-text">Маркетинг</p>
+                </li>
+                <li class="gallery-portfolio-item">
+                    <img class="gallery-portfolio-img" src="./images/portfolio/application.jpg" alt="Человек работает с ноутбука">
+                    <a class="gallery-portfolio-link link" lang="en" href="">Growing Business</a>
+                    <p class="gallery-portfolio-text">Приложение</p>
+                </li>
+            </ul>
         </section>
     </main>
     <!-- Подвал -->
