correction of homework 2.0

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,53 +60,71 @@
                     <button class="portfolio-model-btn" type="button">Маркетинг</button>
                 </li>
             </ul>
-        </section>
-        <!-- Галерея -->
-        <section class="gallery-portfolio">
+            
+            <!-- Галерея -->
+            <h2 hidden>Site</h2>
             <ul class="gallery-portfolio-list list">
                 <li class="gallery-portfolio-item">
-                    <img class="gallery-portfolio-img" src="./images/portfolio/technocryk.jpg" alt="Три специалиста на экране ноутбука">
-                    <a class="gallery-portfolio-link link" href="">Технокряк</a>
+                    <a class="gallery-portfolio-link link" href="">
+                        <img class="gallery-portfolio-img" src="./images/portfolio/technocryk.jpg" alt="Три специалиста на экране ноутбука">
+                        <h3 class="gallery-portfolio-subtitle">Технокряк</h3>
+                    </a> 
                     <p class="gallery-portfolio-text">Веб-сайт</p>
                 </li>
                 <li class="gallery-portfolio-item">
-                    <img class="gallery-portfolio-img" src="./images//portfolio/poster.jpg" alt="Постер New Orlean vs Golden Star">
-                    <a class="gallery-portfolio-link link" href="">Постер New Orlean vs Golden Star</a> 
+                    <a class="gallery-portfolio-link link" href="">
+                        <img class="gallery-portfolio-img" src="./images//portfolio/poster.jpg" alt="Постер New Orlean vs Golden Star">
+                        <h3 class="gallery-portfolio-subtitle">Постер New Orlean vs Golden Star</h3>
+                    </a>
                     <p class="gallery-portfolio-text">Дизайн</p>
                 </li>
                 <li class="gallery-portfolio-item">
-                    <img class="gallery-portfolio-img" src="./images/portfolio/seafood.jpg" alt="Логотип ресторана Seafood">
-                    <a class="gallery-portfolio-link link" href="">Ресторан Seafood</a>
+                    <a class="gallery-portfolio-link link" href="">
+                        <img class="gallery-portfolio-img" src="./images/portfolio/seafood.jpg" alt="Логотип ресторана Seafood">
+                        <h3 class="gallery-portfolio-subtitle">Ресторан Seafood</h3>
+                    </a>
                     <p class="gallery-portfolio-text">Приложение</p>
                 </li>
                 <li class="gallery-portfolio-item">
-                    <img class="gallery-portfolio-img" src="./images/portfolio/prime.jpg" alt="Наушники">
-                    <a class="gallery-portfolio-link link" href="">Проект Prime</a>
+                    <a class="gallery-portfolio-link link" href="">
+                        <img class="gallery-portfolio-img" src="./images/portfolio/prime.jpg" alt="Наушники">
+                        <h3 class="gallery-portfolio-subtitle">Проект Prime</h3>
+                    </a>
                     <p class="gallery-portfolio-text">Маркетинг</p>
                 </li>
                 <li class="gallery-portfolio-item">
-                    <img class="gallery-portfolio-img" src="./images/portfolio/boxes.jpg" alt="Белая и бежевая коробки">
-                    <a class="gallery-portfolio-link link" href="">Проект Boxes</a>
+                    <a class="gallery-portfolio-link link" href="">
+                        <img class="gallery-portfolio-img" src="./images/portfolio/boxes.jpg" alt="Белая и бежевая коробки">
+                        <h3 class="gallery-portfolio-subtitle">Проект Boxes</h3>
+                    </a>
                     <p class="gallery-portfolio-text">Приложение</p>
                 </li>
                 <li class="gallery-portfolio-item">
-                    <img class="gallery-portfolio-img" src="./images/portfolio/web-site.jpg" alt="Включенный монитор компьютера">
-                    <a class="gallery-portfolio-link link" lang="en" href="">Inspiration has no Borders</a>
+                    <a class="gallery-portfolio-link link" href="">
+                        <img class="gallery-portfolio-img" src="./images/portfolio/web-site.jpg" alt="Включенный монитор компьютера">
+                        <h3 class="gallery-portfolio-subtitle" lang="en">Inspiration has no Borders</h3>
+                    </a>
                     <p class="gallery-portfolio-text">Веб-сайт</p>
                 </li>
                 <li class="gallery-portfolio-item">
-                    <img class="gallery-portfolio-img" src="./images/portfolio/edition.jpg" alt="Раскрытый журнал">
-                    <a class="gallery-portfolio-link link" href="">Издание Limited Edition</a>
+                    <a class="gallery-portfolio-link link" href="">
+                        <img class="gallery-portfolio-img" src="./images/portfolio/edition.jpg" alt="Раскрытый журнал">
+                        <h3 class="gallery-portfolio-subtitle">Издание Limited Edition</h3>
+                    </a>
                     <p class="gallery-portfolio-text">Дизайн</p>  
                 </li>
                 <li class="gallery-portfolio-item">
-                    <img class="gallery-portfolio-img" src="./images/portfolio/lab.png" alt="Бирка">
-                    <a class="gallery-portfolio-link link" href="">Проект LAB</a>
+                    <a class="gallery-portfolio-link link" href="">
+                        <img class="gallery-portfolio-img" src="./images/portfolio/lab.png" alt="Бирка">
+                        <h3 class="gallery-portfolio-subtitle">Проект LAB</h3>
+                    </a>
                     <p class="gallery-portfolio-text">Маркетинг</p>
                 </li>
                 <li class="gallery-portfolio-item">
-                    <img class="gallery-portfolio-img" src="./images/portfolio/application.jpg" alt="Человек работает с ноутбука">
-                    <a class="gallery-portfolio-link link" lang="en" href="">Growing Business</a>
+                    <a class="gallery-portfolio-link link" href="">
+                        <img class="gallery-portfolio-img" src="./images/portfolio/application.jpg" alt="Человек работает с ноутбука">
+                        <h3 class="gallery-portfolio-subtitle" lang="en">Growing Business</h3>
+                    </a>
                     <p class="gallery-portfolio-text">Приложение</p>
                 </li>
             </ul>
