correction of homework 3.0

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
                     <a class="navigation-list-link link" href="./index.html">Студия</a>
                 </li> 
                 <li class="navigation-list-item">
-                    <a class="navigation-list-link link" href="">Портфолио</a>
+                    <a class="navigation-list-link-color link" href="">Портфолио</a>
                 </li>
                 <li class="navigation-list-item">
                     <a class="navigation-list-link link" href="">Контакты</a>
@@ -68,64 +68,66 @@
                     <a class="gallery-portfolio-link link" href="">
                         <img class="gallery-portfolio-img" src="./images/portfolio/technocryk.jpg" alt="Три специалиста на экране ноутбука">
                         <h3 class="gallery-portfolio-subtitle">Технокряк</h3>
+                        <p class="gallery-portfolio-text">Веб-сайт</p>
                     </a> 
-                    <p class="gallery-portfolio-text">Веб-сайт</p>
                 </li>
                 <li class="gallery-portfolio-item">
                     <a class="gallery-portfolio-link link" href="">
                         <img class="gallery-portfolio-img" src="./images//portfolio/poster.jpg" alt="Постер New Orlean vs Golden Star">
                         <h3 class="gallery-portfolio-subtitle">Постер New Orlean vs Golden Star</h3>
+                        <p class="gallery-portfolio-text">Дизайн</p>
                     </a>
-                    <p class="gallery-portfolio-text">Дизайн</p>
                 </li>
                 <li class="gallery-portfolio-item">
                     <a class="gallery-portfolio-link link" href="">
                         <img class="gallery-portfolio-img" src="./images/portfolio/seafood.jpg" alt="Логотип ресторана Seafood">
                         <h3 class="gallery-portfolio-subtitle">Ресторан Seafood</h3>
+                        <p class="gallery-portfolio-text">Приложение</p>
                     </a>
-                    <p class="gallery-portfolio-text">Приложение</p>
+                    
                 </li>
                 <li class="gallery-portfolio-item">
                     <a class="gallery-portfolio-link link" href="">
                         <img class="gallery-portfolio-img" src="./images/portfolio/prime.jpg" alt="Наушники">
                         <h3 class="gallery-portfolio-subtitle">Проект Prime</h3>
+                        <p class="gallery-portfolio-text">Маркетинг</p>
                     </a>
-                    <p class="gallery-portfolio-text">Маркетинг</p>
                 </li>
                 <li class="gallery-portfolio-item">
                     <a class="gallery-portfolio-link link" href="">
                         <img class="gallery-portfolio-img" src="./images/portfolio/boxes.jpg" alt="Белая и бежевая коробки">
                         <h3 class="gallery-portfolio-subtitle">Проект Boxes</h3>
+                        <p class="gallery-portfolio-text">Приложение</p>
                     </a>
-                    <p class="gallery-portfolio-text">Приложение</p>
+                    
                 </li>
                 <li class="gallery-portfolio-item">
                     <a class="gallery-portfolio-link link" href="">
                         <img class="gallery-portfolio-img" src="./images/portfolio/web-site.jpg" alt="Включенный монитор компьютера">
                         <h3 class="gallery-portfolio-subtitle" lang="en">Inspiration has no Borders</h3>
+                        <p class="gallery-portfolio-text">Веб-сайт</p>
                     </a>
-                    <p class="gallery-portfolio-text">Веб-сайт</p>
                 </li>
                 <li class="gallery-portfolio-item">
                     <a class="gallery-portfolio-link link" href="">
                         <img class="gallery-portfolio-img" src="./images/portfolio/edition.jpg" alt="Раскрытый журнал">
                         <h3 class="gallery-portfolio-subtitle">Издание Limited Edition</h3>
-                    </a>
-                    <p class="gallery-portfolio-text">Дизайн</p>  
+                        <p class="gallery-portfolio-text">Дизайн</p> 
+                    </a> 
                 </li>
                 <li class="gallery-portfolio-item">
                     <a class="gallery-portfolio-link link" href="">
                         <img class="gallery-portfolio-img" src="./images/portfolio/lab.png" alt="Бирка">
                         <h3 class="gallery-portfolio-subtitle">Проект LAB</h3>
+                        <p class="gallery-portfolio-text">Маркетинг</p>
                     </a>
-                    <p class="gallery-portfolio-text">Маркетинг</p>
                 </li>
                 <li class="gallery-portfolio-item">
                     <a class="gallery-portfolio-link link" href="">
                         <img class="gallery-portfolio-img" src="./images/portfolio/application.jpg" alt="Человек работает с ноутбука">
                         <h3 class="gallery-portfolio-subtitle" lang="en">Growing Business</h3>
+                        <p class="gallery-portfolio-text">Приложение</p>
                     </a>
-                    <p class="gallery-portfolio-text">Приложение</p>
                 </li>
             </ul>
         </section>
