--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a class="logo link" href="./index.html" aria-label="логотип WebStudio">Web<span class="logo-text-header">Studio</span></a>
                 <ul class="navigation-list list">
                     <li class="navigation-list-item">
-                        <a class="navigation-list-link link" href="">Студия</a>
+                        <a class="navigation-list-link-color link" href="">Студия</a>
                     </li> 
                     <li class="navigation-list-item">
                         <a class="navigation-list-link link" href="./portfolio.html">Портфолио</a>
